Fix responsiveness on tablet screens

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -405,13 +405,12 @@ input[name='q']::placeholder {
     background-color: #9e2022;
 }
 
-/* Media Queries */
-
+/* Media Queries */ 
 @media (min-width: 1200px) {
     .container {
       max-width: 80%;
     }
-} 
+}
 
 @media (max-width: 991px) {
     .header-container {
@@ -476,3 +475,11 @@ input[name='q']::placeholder {
     }
 }
 
+@media (min-width: 768px) and (max-width: 1024px) {
+    #mainintrotext {
+        font-size: 2.5rem;
+    }
+    .card-title {
+        font-size: 1.2rem;
+    }
+}
